@@ -2582,7 +2582,7 @@ For game purposes, the races group into factions; for example, orcs often cooper
             id=bleach
             name= "Potion of bleach"
             image=items/potion-red.png
-            duration=level
+            duration=scenario
             description="Oooh tingly!!!"
             [effect]
                 apply_to=image_mod
