@@ -231,6 +231,7 @@ Version 1.11.0-svn:
    * Added [object]duration=turn
    * Pushed LOOT macro from LoW, THoT and TRoW in core
    * Adds new WML attribute for configurable village support (upkeep)
+   * Change [object]duration=level to [object]duration=scenario
  * Miscellaneous and bug fixes:
    * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
      platforms using XDG layout (no compiled-in preferences path override,
